--- a/node/package.json
+++ b/node/package.json
@@ -10,6 +10,7 @@
     "license": "Unlicense",
     "dependencies": {
         "connect-cas": "^1.7.0",
+        "connect-redis": "^3.3.2",
         "express": "^4.16.2",
         "express-session": "^1.15.6",
         "nodemon": "^1.14.6"
