--- a/openresty/nginx/conf/includes/globals/env_vars.conf
+++ b/openresty/nginx/conf/includes/globals/env_vars.conf
@@ -2,8 +2,8 @@
 
 env POSTGREST_HOST;
 env POSTGREST_PORT;
-env NODE_HOST;
-env NODE_PORT;
+env AUTHAPP_HOST;
+env AUTHAPP_PORT;
 env JWT_SECRET;
 
 env DB_SCHEMA;
