--- a/openresty/nginx/conf/includes/http/node_upstream.conf
+++ b/openresty/nginx/conf/includes/http/node_upstream.conf
@@ -1,16 +1,16 @@
 # Define a load balanced
-upstream node {
+upstream authapp {
     # If we're using docker, and this container is linked to one
-    # titled "node", then the os will know to which host "node"
+    # titled "authapp", then the os will know to which host "authapp"
     # refers below. See https://serverfault.com/questions/577370/how-can-i-use-environment-variables-in-nginx-conf
-    server node:4000; 
+    server authapp:4000; 
     # Below, I suspect this has the effect of overriding the
     # port 4000 above. Vanilla nginx cannot use environment
     # variables in upstream blocks.
     balancer_by_lua_block {
         local balancer = require 'ngx.balancer'
-        local host = os.getenv('NODE_HOST')
-        local port = os.getenv('NODE_PORT')
+        local host = os.getenv('AUTHAPP_HOST')
+        local port = os.getenv('AUTHAPP_PORT')
         ngx.log(ngx.NOTICE, "Host") 
         ngx.log(ngx.NOTICE,  host) 
         ngx.log(ngx.NOTICE, "Port") 
