--- a/openresty/nginx/conf/includes/http/server/locations/authapp.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/authapp.conf
@@ -9,5 +9,5 @@ location / {
     proxy_set_header   X-Forwarded-Proto $scheme;
     proxy_set_header   Host                   $http_host;
     proxy_set_header   X-NginX-Proxy    true;
-    proxy_pass http://node/; # Reverse proxy to node
+    proxy_pass http://authapp/; # Reverse proxy to authapp
 }
