--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -12,9 +12,9 @@
     "start": "webpack-dev-server --hot --inline",
     "prebuild": "rimraf dist",
     "build": "webpack",
-    "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall -g elm && npm i -g elm && npm i && elm package install"
+    "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall elm && npm i elm && npm i && elm package install --yes"
   },
-  "devDependencies": {
+  "dependencies": {
     "autoprefixer": "^6.7.7",
     "bootstrap-sass": "^3.3.7",
     "copy-webpack-plugin": "^4.0.1",
