Add elmclient to openresty and move authapp to /auth

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,6 +122,8 @@ services:
       - POSTGREST_PORT=${POSTGREST_PORT}
       - AUTHAPP_HOST=${AUTHAPP_HOST}
       - AUTHAPP_PORT=${AUTHAPP_PORT}
+      - ELMCLIENT_HOST=${ELMCLIENT_HOST}
+      - ELMCLIENT_PORT=${ELMCLIENT_PORT}
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
       - DB_NAME=${DB_NAME}
