--- a/openresty/nginx/conf/includes/globals/env_vars.conf
+++ b/openresty/nginx/conf/includes/globals/env_vars.conf
@@ -4,6 +4,8 @@ env POSTGREST_HOST;
 env POSTGREST_PORT;
 env AUTHAPP_HOST;
 env AUTHAPP_PORT;
+env ELMCLIENT_HOST;
+env ELMCLIENT_PORT;
 env JWT_SECRET;
 
 env DB_SCHEMA;
