--- a/openresty/nginx/conf/includes/http/elmclient_upstream.conf
+++ b/openresty/nginx/conf/includes/http/elmclient_upstream.conf
@@ -1,16 +1,16 @@
 # Define a load balanced
-upstream authapp {
+upstream elmclient {
     # If we're using docker, and this container is linked to one
-    # titled "authapp", then the os will know to which host "authapp"
+    # titled "elmclient", then the os will know to which host "elmclient"
     # refers below. See https://serverfault.com/questions/577370/how-can-i-use-environment-variables-in-nginx-conf
-    server authapp:4000; 
+    server elmclient:4000; 
     # Below, I suspect this has the effect of overriding the
     # port 4000 above. Vanilla nginx cannot use environment
     # variables in upstream blocks.
     balancer_by_lua_block {
         local balancer = require 'ngx.balancer'
-        local host = os.getenv('AUTHAPP_HOST')
-        local port = os.getenv('AUTHAPP_PORT')
+        local host = os.getenv('ELMCLIENT_HOST')
+        local port = os.getenv('ELMCLIENT_PORT')
         local ok, err = balancer.set_current_peer(host, port)
         if not ok then
             ngx.log(ngx.ERR, 'failed to set the current peer ', err)
