--- a/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
@@ -1,6 +1,6 @@
 
 
-location /auth/ {
+location / {
     proxy_set_header  Connection ""; #optimise communication with upstream (keep alive)
     proxy_http_version 1.1;
     proxy_set_header X-Real-IP $remote_addr;
@@ -9,5 +9,5 @@ location /auth/ {
     proxy_set_header   X-Forwarded-Proto $scheme;
     proxy_set_header   Host                   $http_host;
     proxy_set_header   X-NginX-Proxy    true;
-    proxy_pass http://authapp; # Reverse proxy to authapp
+    proxy_pass http://elmclient; # Reverse proxy to elmclient
 }
