--- a/authapp/.eslintrc
+++ b/authapp/.eslintrc
@@ -8,6 +8,7 @@
         "indent": ["error", 4],
         "no-console": 1,
         "require-jsdoc": 2,
-        "valid-jsdoc": 2
+        "valid-jsdoc": 2,
+        "space-before-function-paren": 0,
     }
 }
