--- a/authapp/package.json
+++ b/authapp/package.json
@@ -14,6 +14,7 @@
         "express": "^4.16.2",
         "express-session": "^1.15.6",
         "http-status-codes": "^1.3.0",
+        "jsonwebtoken": "^8.1.0",
         "morgan": "^1.9.0",
         "nodemon": "^1.14.6",
         "pg": "^7.4.0",
