--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "starter-kit",
   "dependencies": {
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "chai-string": "^1.4.0",
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "expect-cookies": "^0.1.2",
     "subzero-cli": "^0.1.17"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-preset-latest": "^6.24.1",
+    "dirty-chai": "^2.0.1",
     "dotenv": "4.0.0",
     "mocha": "^3.2.0",
     "should": "^11.2.0",
