--- a/authapp/package.json
+++ b/authapp/package.json
@@ -9,8 +9,9 @@
     "author": "",
     "license": "Unlicense",
     "dependencies": {
-        "connect-cas": "^1.7.0",
+        "connect-cas": "git+https://git@github.com/kljensen/connect-cas.git",
         "connect-redis": "^3.3.2",
+        "cookie-parser": "^1.4.3",
         "express": "^4.16.2",
         "express-session": "^1.15.6",
         "http-status-codes": "^1.3.0",
