--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -15,24 +15,28 @@
     "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall elm && npm i elm && npm i && elm package install --yes"
   },
   "dependencies": {
+    "ace-css": "^1.1.0",
     "autoprefixer": "^6.7.7",
     "bootstrap-sass": "^3.3.7",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.27.3",
     "elm": "^0.18.0",
-    "elm-webpack-loader": "^4.3.0",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "elm-webpack-loader": "^4.4.0",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.10.1",
-    "html-webpack-plugin": "^2.28.0",
+    "font-awesome": "^4.7.0",
+    "foreman": "^2.0.0",
+    "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
-    "node-sass": "^4.5.1",
+    "json-server": "^0.12.1",
+    "node-sass": "^4.7.2",
     "postcss-loader": "^1.3.3",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.1",
-    "webpack-dev-server": "^2.4.2",
-    "webpack-merge": "^4.1.0"
+    "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.9",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.10.1",
+    "webpack-merge": "^4.1.1"
   }
 }
