--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -21,6 +21,7 @@
         "copy-webpack-plugin": "^4.3.1",
         "css-loader": "^0.27.3",
         "elm": "^0.18.0",
+        "elm-format": "^0.7.0-exp",
         "elm-webpack-loader": "^4.4.0",
         "extract-text-webpack-plugin": "^2.1.2",
         "file-loader": "^0.10.1",
