--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -9,7 +9,7 @@
         "url": "https://github.com/moarwick/elm-webpack-starter"
     },
     "scripts": {
-        "start": "webpack-dev-server --progress --color --hot --inline  --watch-content-base",
+        "start": "webpack-dev-server --progress --color --inline",
         "prebuild": "rimraf dist",
         "build": "webpack",
         "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall elm && npm i elm && npm i && elm package install --yes"
