--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -3,10 +3,10 @@
     "description": "Webpack setup for writing Elm apps",
     "version": "0.8.6",
     "license": "MIT",
-    "author": "Peter Morawiec",
+    "author": "Kyle Jensen, based substantially on work by Peter Morawiec and many others",
     "repository": {
         "type": "git",
-        "url": "https://github.com/moarwick/elm-webpack-starter"
+        "url": "https://github.com/kljensen/yelukerest"
     },
     "scripts": {
         "start": "webpack-dev-server --progress --color --inline",
@@ -30,6 +30,7 @@
         "html-webpack-plugin": "^2.30.1",
         "jquery": "^3.2.1",
         "json-server": "^0.12.1",
+        "milligram-scss": "^1.3.0",
         "node-sass": "^4.7.2",
         "postcss-loader": "^1.3.3",
         "rimraf": "^2.6.2",
