--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -12,6 +12,7 @@
         "start": "webpack-dev-server --progress --color --inline",
         "prebuild": "rimraf dist",
         "build": "webpack",
+        "dev": "webpack",
         "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall elm && npm i elm && npm i && elm package install --yes"
     },
     "dependencies": {
