Using a docker volume which we can't remove now

--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -10,9 +10,8 @@
     },
     "scripts": {
         "start": "webpack-dev-server --progress --color --inline",
-        "prebuild": "rimraf dist",
+        "prebuild": "rimraf dist/*",
         "build": "webpack",
-        "dev": "webpack",
         "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall elm && npm i elm && npm i && elm package install --yes"
     },
     "dependencies": {
