Harcode yale cas b/c lazy

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -53,9 +53,7 @@ services:
       - REDIS_PORT=${REDIS_PORT}
       - SESSION_SECRET=${AUTHAPP_SESSION_SECRET}
       - DEVELOPMENT=${DEVELOPMENT}
-      - CAS_HOST=${AUTHAPP_CAS_HOST}
-      - CAS_SERVICE_VALIDATE_HOST=${AUTHAPP_CAS_SERVICE_VALIDATE_HOST}
-      - CAS_PROTOCOL=${AUTHAPP_CAS_PROTOCOL}
+      - CAS_HOST=secure.its.yale.edu
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
       - DB_SCHEMA=${DB_SCHEMA}
