--- a/openresty/nginx/conf/includes/http/server/locations/authapp.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/authapp.conf
@@ -6,7 +6,12 @@ location /auth/ {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    # TODO , make open resty respect x-forwarded-for on incoming
+    # this is a hack for now to get express to set cookies
     proxy_set_header   X-Forwarded-Proto $scheme;
+    proxy_set_header   X-Forwarded-Proto https;
+
     proxy_set_header   Host                   $http_host;
     proxy_set_header   X-NginX-Proxy    true;
     proxy_cache off;
