--- a/openresty/nginx/conf/includes/http/server/locations/authapp.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/authapp.conf
@@ -10,7 +10,7 @@ location /auth/ {
     # TODO , make open resty respect x-forwarded-for on incoming
     # this is a hack for now to get express to set cookies
     proxy_set_header   X-Forwarded-Proto $scheme;
-    proxy_set_header   X-Forwarded-Proto https;
+    #proxy_set_header   X-Forwarded-Proto https;
 
     proxy_set_header   Host                   $http_host;
     proxy_set_header   X-NginX-Proxy    true;
