--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -35,6 +35,7 @@
         "postcss-loader": "^1.3.3",
         "rimraf": "^2.6.2",
         "sass-loader": "^6.0.6",
+        "source-code-pro": "0.0.0",
         "style-loader": "^0.16.1",
         "url-loader": "^0.5.9",
         "webpack": "^2.7.0",
