--- a/docker-compose.base.yaml
+++ b/docker-compose.base.yaml
@@ -23,7 +23,7 @@ services:
   # PostgREST instance, is responsible for communicating with the database
   # and providing a REST api, (almost) every request that is sent to the database goes through it
   postgrest:
-    image: postgrest/postgrest
+    image: postgrest/postgrest:v0.4.4.0
     ports:
       - "3000:${POSTGREST_PORT}"
     links:
