--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -11,6 +11,12 @@ http {
     # a shorter log format for development
     log_format development '[$time_local] "$request" $status $body_bytes_sent "$request_time ms"';
     
+    # For websockets
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
     server {
         listen 80 default_server;
         server_name _;
