Make sharedterminal upstream configurable by environment variable
Only run the docker service in development

--- a/docker-compose.base.yaml
+++ b/docker-compose.base.yaml
@@ -60,7 +60,8 @@ services:
       - AUTHAPP_PORT=${AUTHAPP_PORT}
       - ELMCLIENT_HOST=${ELMCLIENT_HOST}
       - ELMCLIENT_PORT=${ELMCLIENT_PORT}
-      - SHARED_TERMINAL_PORT=${SHARED_TERMINAL_PORT}
+      - SHAREDTERMINAL_PORT=${SHAREDTERMINAL_PORT}
+      - SHAREDTERMINAL_HOST=${SHAREDTERMINAL_HOST}
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
       - DB_NAME=${DB_NAME}
@@ -105,10 +106,3 @@ services:
     image: redis:4
     ports:
       - "6379:6379"
-
-
-
-  sharedterminal:
-    build: sharedterminal
-    environment:
-      - SHARED_TERMINAL_PORT=${SHARED_TERMINAL_PORT}
