--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -96,3 +96,8 @@ services:
       - "./authapp/run.sh:/app/run.sh"
     # The script that is run to start our process.
     entrypoint: "/app/run.sh"
+
+  sharedterminal:
+    build: sharedterminal
+    environment:
+      - SHAREDTERMINAL_PORT=${SHAREDTERMINAL_PORT}
