--- a/openresty/nginx/conf/includes/http/server/locations/sharedterminal.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/sharedterminal.conf
@@ -9,5 +9,5 @@ location /terminal/ {
     proxy_set_header   Host                   $http_host;
     proxy_set_header   X-NginX-Proxy    true;
     proxy_cache off;
-    proxy_pass http://sharedterminal:8080/; # Reverse proxy to authapp
+    proxy_pass http://sharedterminal_upstream/; # Reverse proxy to authapp
 }
