Add placeholder address for sharedterminal upstream

--- a/openresty/nginx/conf/includes/http/sharedterminal_upstream.conf
+++ b/openresty/nginx/conf/includes/http/sharedterminal_upstream.conf
@@ -1,6 +1,6 @@
 #  Define a load balanced
 upstream sharedterminal_upstream {
-    server sharedterminal:4000; 
+    server 0.0.0.1; # Invalid address as a placeholder 
     balancer_by_lua_block {
         local balancer = require 'ngx.balancer'
         local host = os.getenv('SHAREDTERMINAL_HOST')
