Use invalid addresses as placeholders where balancer_by_lua_block used

--- a/openresty/nginx/conf/includes/http/authapp_upstream.conf
+++ b/openresty/nginx/conf/includes/http/authapp_upstream.conf
@@ -3,7 +3,7 @@ upstream authapp {
     # If we're using docker, and this container is linked to one
     # titled "authapp", then the os will know to which host "authapp"
     # refers below. See https://serverfault.com/questions/577370/how-can-i-use-environment-variables-in-nginx-conf
-    server authapp:4000; 
+    server 0.0.0.1; # Invalid address as a placeholder 
     # Below, I suspect this has the effect of overriding the
     # port 4000 above. Vanilla nginx cannot use environment
     # variables in upstream blocks.
