--- a/openresty/nginx/conf/includes/http/postgrest_upstream.conf
+++ b/openresty/nginx/conf/includes/http/postgrest_upstream.conf
@@ -1,5 +1,5 @@
 upstream postgrest {
-    server postgrest:3000;
+    server 0.0.0.1; # Invalid address as a placeholder 
     balancer_by_lua_block {
         local balancer = require 'ngx.balancer'
         local host = os.getenv('POSTGREST_HOST')
