--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-import": "^2.8.0",
     "expect-cookies": "^0.1.2",
     "lodash": "^4.17.4",
+    "npm": "^5.8.0",
     "subzero-cli": "^0.1.17"
   },
   "devDependencies": {
