--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "elm-webpack-starter",
+    "name": "yeluke-elm-webpack",
     "description": "Webpack setup for writing Elm apps",
     "version": "0.8.6",
     "license": "MIT",
@@ -16,30 +16,30 @@
     },
     "dependencies": {
         "ace-css": "^1.1.0",
-        "autoprefixer": "^6.7.7",
+        "autoprefixer": "^8.6.2",
         "bootstrap-sass": "^3.3.7",
-        "copy-webpack-plugin": "^4.3.1",
-        "css-loader": "^0.27.3",
-        "elm": "^0.18.0",
+        "copy-webpack-plugin": "^4.5.1",
+        "css-loader": "^0.28.11",
+        "elm": "^0.18.0-exp5",
         "elm-format": "^0.7.0-exp",
-        "elm-webpack-loader": "^4.4.0",
-        "extract-text-webpack-plugin": "^2.1.2",
-        "file-loader": "^0.10.1",
+        "elm-webpack-loader": "^4.5.0",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "file-loader": "^1.1.11",
         "font-awesome": "^4.7.0",
-        "foreman": "^2.0.0",
-        "html-webpack-plugin": "^2.30.1",
-        "jquery": "^3.2.1",
-        "json-server": "^0.12.1",
+        "foreman": "^3.0.0",
+        "html-webpack-plugin": "^3.2.0",
+        "jquery": "^3.3.1",
+        "json-server": "^0.14.0",
         "milligram-scss": "^1.3.0",
-        "node-sass": "^4.7.2",
-        "postcss-loader": "^1.3.3",
+        "node-sass": "^4.9.0",
+        "postcss-loader": "^2.1.5",
         "rimraf": "^2.6.2",
-        "sass-loader": "^6.0.6",
-        "source-code-pro": "0.0.0",
-        "style-loader": "^0.16.1",
-        "url-loader": "^0.5.9",
-        "webpack": "^2.7.0",
-        "webpack-dev-server": "^2.10.1",
-        "webpack-merge": "^4.1.1"
+        "sass-loader": "^7.0.3",
+        "source-code-pro": "^2.30.1",
+        "style-loader": "^0.21.0",
+        "url-loader": "^1.0.1",
+        "webpack": "^4.12.0",
+        "webpack-dev-server": "^3.1.4",
+        "webpack-merge": "^4.1.2"
     }
 }
