Update version of Postgrest

--- a/docker-compose.base.yaml
+++ b/docker-compose.base.yaml
@@ -25,7 +25,7 @@ services:
   # PostgREST instance, is responsible for communicating with the database
   # and providing a REST api, (almost) every request that is sent to the database goes through it
   postgrest:
-    image: postgrest/postgrest:v0.4.4.0
+    image: postgrest/postgrest:v0.5.0.0-6bcbb12
     ports:
       - "127.0.0.1:3000:${POSTGREST_PORT}"
     links:
