--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -17,7 +17,7 @@ services:
   # use a separate database instance, like Amazon RDS, i.e. in production this section will be
   # commented and in the .env file you will specify the ip of your separate database instance
   db:
-    image: postgres:10.4
+    image: ${PG_DOCKER_IMAGE}
     ports:
       - "127.0.0.1:5432:${DB_PORT}"
     environment:
