--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -18,6 +18,7 @@
         "ace-css": "^1.1.0",
         "autoprefixer": "^6.7.7",
         "bootstrap-sass": "^3.3.7",
+        "compression-webpack-plugin": "^1.1.11",
         "copy-webpack-plugin": "^4.3.1",
         "css-loader": "^0.27.3",
         "elm": "^0.18.0",
