--- a/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
@@ -3,4 +3,10 @@
 location / {
     root /var/elmclient;
     index index.html;
+    gzip_static on;
+    location ~* main-.*\.(?:css|js)$ {
+        expires max;
+        add_header Pragma public;
+        add_header Cache-Control "public";
+    }
 }
