--- a/openresty/nginx/conf/includes/globals/env_vars.conf
+++ b/openresty/nginx/conf/includes/globals/env_vars.conf
@@ -4,6 +4,8 @@ env POSTGREST_HOST;
 env POSTGREST_PORT;
 env AUTHAPP_HOST;
 env AUTHAPP_PORT;
+env SSE_HOST;
+env SSE_PORT;
 env SHAREDTERMINAL_HOST;
 env SHAREDTERMINAL_PORT;
 env ELMCLIENT_HOST;
