--- a/sse/Dockerfile
+++ b/sse/Dockerfile
@@ -4,7 +4,7 @@ FROM golang:1.8.5-jessie as builder
 # install xz
 RUN apt-get update && apt-get install -y \
     xz-utils \
-&& rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/*
 # install UPX
 ADD https://github.com/upx/upx/releases/download/v3.94/upx-3.94-amd64_linux.tar.xz /usr/local
 RUN xz -d -c /usr/local/upx-3.94-amd64_linux.tar.xz | \
@@ -22,16 +22,16 @@ RUN dep ensure --vendor-only
 # add source code
 ADD src src
 # build the source
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main src/server.go
+RUN cd src && CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main 
 # strip and compress the binary
-RUN strip --strip-unneeded main
-RUN upx main
+RUN cd src && strip --strip-unneeded main
+RUN cd src && upx main
 
 # use scratch (base for a docker image)
 FROM scratch
 # set working directory
 WORKDIR /root
 # copy the binary from builder
-COPY --from=builder /go/src/app/main .
+COPY --from=builder /go/src/app/src/main .
 # run the binary
 CMD ["./main"]
