Update version of alpine and postgres, by extension

--- a/backup/Dockerfile
+++ b/backup/Dockerfile
@@ -1,5 +1,7 @@
-FROM alpine:3.5
-LABEL maintainer="Johannes Schickling <schickling.j@gmail.com>"
+# This is from here
+# https://github.com/schickling/dockerfiles/tree/master/postgres-backup-s3
+# originally. 
+FROM alpine:3.8
 
 ADD install.sh install.sh
 RUN sh install.sh && rm install.sh
