Add canvas url on index view, passed in by env var

--- a/docker-compose.base.yaml
+++ b/docker-compose.base.yaml
@@ -13,6 +13,7 @@ services:
       - DEVELOPMENT=${DEVELOPMENT}
       - PIAZZA_URL=${ELMCLIENT_PIAZZA_URL}
       - ABOUT_URL=${ELMCLIENT_ABOUT_URL}
+      - CANVAS_URL=${ELMCLIENT_CANVAS_URL}
       - COURSE_TITLE=${ELMCLIENT_COURSE_TITLE}
     volumes:
       # Note that the package.json-like files were moved into the
