Update node. Closes #47

--- a/elmclient/Dockerfile
+++ b/elmclient/Dockerfile
@@ -1,6 +1,8 @@
 # Custom docker file to make our builds a little more effocient.
 # We want to ensure the node_modules and elm_stuff are cached.
-FROM node:carbon
+# Otherwise, this Dockerfile is just the same the official node
+# Docker image https://hub.docker.com/_/node/. Of course, 
+FROM node:10.16.0-stretch
 
 RUN mkdir -p /opt/app
 ADD package.json /opt/app/package.json
