--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -16,31 +16,37 @@
     },
     "dependencies": {
         "ace-css": "^1.1.0",
-        "autoprefixer": "^6.7.7",
+        "autoprefixer": "^9.6.0",
         "bootstrap-sass": "^3.3.7",
-        "compression-webpack-plugin": "^1.1.11",
-        "copy-webpack-plugin": "^4.3.1",
-        "css-loader": "^0.27.3",
+        "compression-webpack-plugin": "^3.0.0",
+        "copy-webpack-plugin": "^5.0.3",
+        "css-loader": "^2.1.1",
+        "cssnano": "^4.1.10",
         "elm": "^0.18.0",
-        "elm-format": "^0.7.0-exp",
+        "elm-format": "^0.8.1",
         "elm-github-install": "^1.6.1",
-        "elm-webpack-loader": "^4.4.0",
-        "extract-text-webpack-plugin": "^2.1.2",
-        "file-loader": "^0.10.1",
-        "foreman": "^2.0.0",
-        "html-webpack-plugin": "^2.30.1",
+        "elm-webpack-loader": "^4.5.0",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "file-loader": "^4.0.0",
+        "foreman": "^3.0.1",
+        "html-webpack-plugin": "^3.2.0",
         "jquery": "^3.2.1",
-        "json-server": "^0.12.1",
+        "json-server": "^0.15.0",
         "milligram-scss": "^1.3.0",
+        "mini-css-extract-plugin": "^0.7.0",
         "node-sass": "^4.7.2",
-        "postcss-loader": "^1.3.3",
+        "postcss-import": "^12.0.1",
+        "postcss-loader": "^3.0.0",
+        "postcss-preset-env": "^6.6.0",
         "rimraf": "^2.6.2",
-        "sass-loader": "^6.0.6",
-        "source-code-pro": "0.0.0",
-        "style-loader": "^0.16.1",
-        "url-loader": "^0.5.9",
-        "webpack": "^2.7.0",
-        "webpack-dev-server": "^2.10.1",
+        "sass-loader": "^7.1.0",
+        "source-code-pro": "^2.30.1",
+        "style-loader": "^0.23.1",
+        "sugarss": "^2.0.0",
+        "url-loader": "^2.0.0",
+        "webpack": "^4.33.0",
+        "webpack-cli": "^3.3.3",
+        "webpack-dev-server": "^3.7.1",
         "webpack-merge": "^4.1.1"
     }
 }
