--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -12,7 +12,7 @@
         "start": "webpack-dev-server --progress --color --inline",
         "prebuild": "rm -rf dist/*",
         "build": "webpack",
-        "reinstall": "rm -rf dist/* node_modules && npm i elm && npm i && elm package install --yes"
+        "reinstall": "rm -rf dist/* node_modules && npm i elm && npm i && mkdir -p src/elm; elm make; true"
     },
     "dependencies": {
         "ace-css": "^1.1.0",
@@ -20,13 +20,12 @@
         "bootstrap-sass": "^3.3.7",
         "compression-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^5.0.3",
-        "css-loader": "^2.1.1",
+        "css-loader": "^3.0.0",
         "cssnano": "^4.1.10",
-        "elm": "^0.18.0",
+        "elm": "^0.19.0-no-deps",
         "elm-format": "^0.8.1",
         "elm-github-install": "^1.6.1",
-        "elm-webpack-loader": "^4.5.0",
-        "extract-text-webpack-plugin": "^3.0.2",
+        "elm-webpack-loader": "^5.0.0",
         "file-loader": "^4.0.0",
         "foreman": "^3.0.1",
         "html-webpack-plugin": "^3.2.0",
@@ -44,9 +43,9 @@
         "style-loader": "^0.23.1",
         "sugarss": "^2.0.0",
         "url-loader": "^2.0.0",
-        "webpack": "^4.33.0",
-        "webpack-cli": "^3.3.3",
-        "webpack-dev-server": "^3.7.1",
+        "webpack": "^4.34.0",
+        "webpack-cli": "^3.3.4",
+        "webpack-dev-server": "^3.7.2",
         "webpack-merge": "^4.1.1"
     }
 }
