--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "starter-kit",
-  "dependencies": {
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
-    "chai-string": "^1.5.0",
-    "elm-format": "^0.7.0-exp",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "expect-cookies": "^0.1.2",
-    "lodash": "^4.17.10",
-    "npm": "^5.10.0",
-    "subzero-cli": "^0.1.23"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-latest": "^6.24.1",
-    "dirty-chai": "^2.0.1",
-    "dotenv": "4.0.0",
-    "mocha": "^3.2.0",
-    "should": "^11.2.0",
-    "supertest": "^3.3.0"
-  },
-  "scripts": {
-    "test_rest": "mocha --recursive ./tests/rest/",
-    "test_db": "( set -a && . ./.env && set +a && docker run -i -t --rm --name pgtap --net ${COMPOSE_PROJECT_NAME}_default --link ${COMPOSE_PROJECT_NAME}_db_1:db -v $(pwd)/tests/db/:/test -e HOST=$DB_HOST -e DATABASE=$DB_NAME -e USER=$SUPER_USER -e PASSWORD=$SUPER_USER_PASSWORD lren/pgtap )",
-    "test": "npm run test_db && npm run test_rest"
-  },
-  "author": "ruslan.talpa@subzero.cloud",
-  "license": "ISC"
+    "name": "starter-kit",
+    "dependencies": {
+        "chai": "^4.1.2",
+        "chai-as-promised": "^7.1.1",
+        "chai-string": "^1.5.0",
+        "elm": "^0.19.0-no-deps",
+        "elm-format": "^0.8.1",
+        "eslint": "^4.19.1",
+        "eslint-config-airbnb-base": "^12.1.0",
+        "eslint-plugin-import": "^2.14.0",
+        "expect-cookies": "^0.1.2",
+        "lodash": "^4.17.10",
+        "npm": "^5.10.0",
+        "subzero-cli": "^0.1.23"
+    },
+    "devDependencies": {
+        "babel-core": "^6.26.3",
+        "babel-preset-latest": "^6.24.1",
+        "dirty-chai": "^2.0.1",
+        "dotenv": "4.0.0",
+        "mocha": "^3.2.0",
+        "should": "^11.2.0",
+        "supertest": "^3.3.0"
+    },
+    "scripts": {
+        "test_rest": "mocha --recursive ./tests/rest/",
+        "test_db": "( set -a && . ./.env && set +a && docker run -i -t --rm --name pgtap --net ${COMPOSE_PROJECT_NAME}_default --link ${COMPOSE_PROJECT_NAME}_db_1:db -v $(pwd)/tests/db/:/test -e HOST=$DB_HOST -e DATABASE=$DB_NAME -e USER=$SUPER_USER -e PASSWORD=$SUPER_USER_PASSWORD lren/pgtap )",
+        "test": "npm run test_db && npm run test_rest"
+    },
+    "author": "ruslan.talpa@subzero.cloud",
+    "license": "ISC"
 }
