--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -28,6 +28,7 @@
         "elm-webpack-loader": "^5.0.0",
         "file-loader": "^4.0.0",
         "foreman": "^3.0.1",
+        "html-webpack-inline-source-plugin": "0.0.10",
         "html-webpack-plugin": "^3.2.0",
         "jquery": "^3.2.1",
         "json-server": "^0.15.0",
